# ubuntu-termux

./: LICENSE  Pipfile  README.md  pyproject.toml  setup.py  test_i.py
ubuntu_termux/: install.py  start.py
